--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pascal-achard.me",
   "version": "1.0.0",
-  "description": "My personnal website",
+  "description": "Pascal Achard personnal website",
   "author": "Pascal Achard",
   "private": true,
   "scripts": {
@@ -15,10 +15,13 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^1.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.9",
+    "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.16.4",
-    "nodemon": "^1.18.9"
+    "sass-loader": "^7.1.0",
+    "tailwindcss": "^1.0.0"
   }
 }
