--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "pascal-achard.me",
-  "version": "1.0.0",
-  "description": "Pascal Achard un développeur front-end sénior depuis 3 ans mais qui a 20 ans d'expérience dans la création de sites Web et d'applications Web. Il est spécialisé dans le JavaScript (es6+) et notamment avec le framework Vuejs.",
-  "author": "Pascal Achard",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/google-analytics": "^2.2.0",
-    "nuxt": "^2.0.0"
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.18.9",
-    "nuxt-purgecss": "^0.2.1",
-    "prettier": "^1.16.4",
-    "sass-loader": "^7.1.0",
-    "tailwindcss": "^1.0.0"
-  }
+    "name": "pascal-achard.me",
+    "version": "1.0.0",
+    "description": "Pascal Achard un développeur front-end sénior depuis 3 ans mais qui a 20 ans d'expérience dans la création de sites Web et d'applications Web. Il est spécialisé dans le JavaScript (es6+) et notamment avec le framework Vuejs.",
+    "author": "Pascal Achard",
+    "private": true,
+    "scripts": {
+        "dev": "HOST=0.0.0.0 nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate"
+    },
+    "dependencies": {
+        "@nuxtjs/axios": "^5.3.6",
+        "@nuxtjs/google-analytics": "^2.2.0",
+        "nuxt": "^2.0.0"
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^4.1.0",
+        "eslint-plugin-prettier": "^3.0.1",
+        "node-sass": "^4.12.0",
+        "nodemon": "^1.18.9",
+        "nuxt-purgecss": "^0.2.1",
+        "prettier": "^1.16.4",
+        "sass-loader": "^7.1.0",
+        "tailwindcss": "^1.0.0"
+    }
 }
