--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@nuxtjs/axios": "^5.3.6",
         "@nuxtjs/google-analytics": "^2.2.0",
+        "@nuxtjs/sitemap": "^1.2.0",
         "nuxt": "^2.0.0"
     },
     "devDependencies": {
