--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@nuxtjs/google-analytics": "^2.2.0",
         "@nuxtjs/robots": "^2.3.0",
         "@nuxtjs/sitemap": "^1.2.0",
+        "locomotive-scroll": "^3.0.3",
         "nuxt": "^2.0.0"
     },
     "devDependencies": {
