--- a/package.json
+++ b/package.json
@@ -8,24 +8,30 @@
         "dev": "HOST=0.0.0.0 nuxt",
         "build": "nuxt build",
         "start": "nuxt start",
-        "generate": "nuxt generate"
+        "generate": "nuxt generate",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+        "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
     },
     "dependencies": {
-        "@nuxtjs/axios": "^5.3.6",
+        "@nuxtjs/axios": "^5.6.0",
         "@nuxtjs/google-analytics": "^2.2.0",
-        "@nuxtjs/robots": "^2.3.0",
-        "@nuxtjs/sitemap": "^1.2.0",
-        "locomotive-scroll": "^3.0.3",
-        "nuxt": "^2.0.0"
+        "@nuxtjs/robots": "^2.4.0",
+        "@nuxtjs/sitemap": "^1.3.0",
+        "babel-eslint": "^10.0.2",
+        "eslint": "^6.2.1",
+        "eslint-loader": "^2.2.1",
+        "eslint-plugin-vue": "^5.2.3",
+        "locomotive-scroll": "^3.1.1",
+        "nuxt": "^2.9.1"
     },
     "devDependencies": {
-        "eslint-config-prettier": "^4.1.0",
-        "eslint-plugin-prettier": "^3.0.1",
+        "eslint-config-prettier": "^6.1.0",
+        "eslint-plugin-prettier": "^3.1.0",
         "node-sass": "^4.12.0",
         "nodemon": "^1.18.9",
         "nuxt-purgecss": "^0.2.1",
-        "prettier": "^1.16.4",
-        "sass-loader": "^7.1.0",
-        "tailwindcss": "^1.0.0"
+        "prettier": "^1.18.2",
+        "sass-loader": "^7.3.1",
+        "tailwindcss": "^1.1.2"
     }
 }
