--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
         "@nuxtjs/google-analytics": "^2.2.0",
         "@nuxtjs/robots": "^2.4.0",
         "@nuxtjs/sitemap": "^1.3.0",
-        "babel-eslint": "^10.0.2",
-        "eslint": "^6.2.1",
-        "eslint-loader": "^2.2.1",
-        "eslint-plugin-vue": "^5.2.3",
         "locomotive-scroll": "^3.1.1",
         "nuxt": "^2.9.1"
     },
@@ -32,6 +28,10 @@
         "nuxt-purgecss": "^0.2.1",
         "prettier": "^1.18.2",
         "sass-loader": "^7.3.1",
-        "tailwindcss": "^1.1.2"
+        "tailwindcss": "^1.1.2",
+        "babel-eslint": "^10.0.2",
+        "eslint": "^6.2.1",
+        "eslint-loader": "^2.2.1",
+        "eslint-plugin-vue": "^5.2.3"
     }
 }
