--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "dependencies": {
         "@nuxtjs/axios": "^5.6.0",
         "@nuxtjs/google-analytics": "^2.2.0",
-        "@nuxtjs/robots": "^2.4.0",
+        "@nuxtjs/robots": "^2.4.1",
         "@nuxtjs/sitemap": "^1.3.0",
-        "locomotive-scroll": "^3.1.1",
-        "nuxt": "^2.9.1"
+        "locomotive-scroll": "^3.1.5",
+        "nuxt": "^2.9.2"
     },
     "devDependencies": {
-        "eslint-config-prettier": "^6.1.0",
+        "babel-eslint": "^10.0.3",
+        "eslint": "^6.4.0",
+        "eslint-config-prettier": "^6.3.0",
+        "eslint-loader": "^3.0.0",
         "eslint-plugin-prettier": "^3.1.0",
+        "eslint-plugin-vue": "^5.2.3",
         "node-sass": "^4.12.0",
-        "nodemon": "^1.18.9",
+        "nodemon": "^1.19.2",
         "nuxt-purgecss": "^0.2.1",
         "prettier": "^1.18.2",
-        "sass-loader": "^7.3.1",
-        "tailwindcss": "^1.1.2",
-        "babel-eslint": "^10.0.2",
-        "eslint": "^6.2.1",
-        "eslint-loader": "^2.2.1",
-        "eslint-plugin-vue": "^5.2.3"
+        "sass-loader": "^8.0.0",
+        "tailwindcss": "^1.1.2"
     }
 }
