--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-    "name": "pascal-achard.me",
-    "version": "1.0.0",
-    "description": "Pascal Achard un développeur front-end sénior depuis 3 ans mais qui a 20 ans d'expérience dans la création de sites Web et d'applications Web. Il est spécialisé dans le JavaScript (es6+) et notamment avec le framework Vuejs.",
-    "author": "Pascal Achard",
-    "private": true,
-    "scripts": {
-        "dev": "HOST=0.0.0.0 nuxt",
-        "build": "nuxt build",
-        "start": "nuxt start",
-        "generate": "nuxt generate",
-        "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-        "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
-    },
-    "dependencies": {
-        "@nuxtjs/axios": "^5.8.0",
-        "@nuxtjs/google-analytics": "^2.2.1",
-        "@nuxtjs/robots": "^2.4.2",
-        "@nuxtjs/sitemap": "^2.0.1",
-        "locomotive-scroll": "^3.2.5",
-        "nuxt": "^2.10.2"
-    },
-    "devDependencies": {
-        "babel-eslint": "^10.0.3",
-        "eslint": "^6.6.0",
-        "eslint-config-prettier": "^6.5.0",
-        "eslint-loader": "^3.0.2",
-        "eslint-plugin-prettier": "^3.1.1",
-        "eslint-plugin-vue": "^6.0.1",
-        "node-sass": "^4.13.0",
-        "nodemon": "^1.19.4",
-        "nuxt-purgecss": "^0.2.1",
-        "prettier": "^1.19.1",
-        "sass-loader": "^8.0.0",
-        "tailwindcss": "^1.1.3"
-    }
+  "name": "pascal-achard.me",
+  "version": "1.0.0",
+  "description": "Pascal Achard un développeur front-end sénior depuis 3 ans mais qui a 20 ans d'expérience dans la création de sites Web et d'applications Web. Il est spécialisé dans le JavaScript (es6+) et notamment avec le framework Vuejs.",
+  "author": "Pascal Achard",
+  "private": true,
+  "scripts": {
+    "dev": "HOST=0.0.0.0 nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
+  },
+  "dependencies": {
+    "@nuxtjs/axios": "^5.8.0",
+    "@nuxtjs/robots": "^2.4.2",
+    "@nuxtjs/sitemap": "^2.0.1",
+    "locomotive-scroll": "^3.2.5",
+    "nuxt": "^2.10.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.0.1",
+    "node-sass": "^4.13.0",
+    "nodemon": "^1.19.4",
+    "nuxt-purgecss": "^0.2.1",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
+    "tailwindcss": "^1.1.3",
+    "@nuxtjs/google-analytics": "^2.2.1"
+  }
 }
