--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.8.0",
+    "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.0.1",
-    "locomotive-scroll": "^3.2.5",
-    "nuxt": "^2.10.2"
+    "locomotive-scroll": "^3.2.9",
+    "nuxt": "^2.11.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.2.3",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.0.1",
-    "node-sass": "^4.13.0",
-    "nodemon": "^1.19.4",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.1.2",
+    "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0",
-    "tailwindcss": "^1.1.3",
-    "@nuxtjs/google-analytics": "^2.2.1"
+    "sass-loader": "^8.0.2",
+    "tailwindcss": "^1.2.0"
   }
 }
