--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@nuxt/content": "^1.15.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
